<resources>
    <string name="app_name">Carnet de Voyage</string>
    <string name="fin_du_trajet">Fin du trajet</string>
    <string name="debuter_le_trajet">Débuter un trajet</string>
    <string name="nouveau_trajet">Nouveau trajet</string>
    <string name="titre_application">Carnet de Voyage</string>
    <string name="titre_formulaire">Nouveau voyage</string>
    <string name="nom_voyage">Nom du voyage</string>
    <string name="annuler_voyage">Annuler</string>
    <string name="trajet_en_cours_textView">Trajet en cours</string>
    <string name="enregistrer_la_position">Ajouter une position</string>
    <string name="titre_page_trajet_en_cours">"Trajet : "</string>
    <string-array name="duree_options">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="titre_temps_actualisation_textview">Fréquence de localisation (sec)</string>
    <string name="content_description_logo">Logo Carnet de Voyage</string>
    <string name="texte_nb_positions">Nombre de positions enregistrées :</string>
    <string name="titre_liste_trajets">Liste des voyages</string>
    <string name="nom_utilisateur">Nom utilisateur </string>
    <string name="rechercher">Rechercher </string>


</resources>