<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AffichageTrajetEnCours">

    <TextView
        android:id="@+id/id_trajet_en_cours_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:text="@string/trajet_en_cours_textView"
        app:layout_constraintStart_toStartOf="@+id/button_terminer_trajet"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_nombre_positions_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/texte_nb_positions"
        app:layout_constraintTop_toBottomOf="@+id/id_trajet_en_cours_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/button_terminer_trajet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:backgroundTint="#971A1A"
        android:onClick="onClickTerminerTrajet"
        android:text="@string/fin_du_trajet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_trajet_en_cours_textview" />

    <Button
        android:id="@+id/id_enregistrer_la_position_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:backgroundTint="#4355DC"
        android:onClick="onClickAjouterPositionManuellement"
        android:text="@string/enregistrer_la_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_trajet_en_cours_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>