<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaireDebuterVoyage"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="27dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintBottom_toTopOf="@+id/id_titreFormulaire_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_no_bg" />

    <EditText
        android:id="@+id/id_nom_voyage_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/nom_voyage"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/id_temps_actualisation_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_titreFormulaire_textview" />

    <Button
        android:id="@+id/id_annuler_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="239dp"
        android:backgroundTint="@color/rouge"
        android:onClick="onClickAnnuler"
        android:text="@string/annuler_voyage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_valider_button"
        app:layout_constraintTop_toBottomOf="@+id/id_duree_spinner" />

    <Button
        android:id="@+id/id_valider_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/vert"
        android:onClick="onClickValiderVoyage"
        android:text="@string/debuter_le_trajet"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_annuler_button"
        app:layout_constraintEnd_toStartOf="@+id/id_annuler_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/id_duree_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toTopOf="@+id/id_annuler_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_temps_actualisation_textview" />

    <TextView
        android:id="@+id/id_temps_actualisation_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/titre_temps_actualisation_textview"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/id_duree_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_nom_voyage_edittext" />

    <TextView
        android:id="@+id/id_titreFormulaire_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/titre_formulaire"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/id_nom_voyage_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>