<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitePrincipale">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintBottom_toTopOf="@+id/id_titreApplication_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_no_bg" />

    <Button
        android:id="@+id/id_nouveauTrajet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/vert"
        android:onClick="onClickDebuterTrajet"
        android:text="@string/nouveau_trajet"
        android:textColorLink="@color/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_voyages" />

    <TextView
        android:id="@+id/id_titreApplication_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="11dp"
        android:text="@string/titre_application"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/id_rechercher_utilisateur_button"
        app:layout_constraintEnd_toEndOf="@+id/id_rechercher_utilisateur_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_mes_voyages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="14dp"
        android:text="@string/titre_liste_trajets"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_voyages"
        app:layout_constraintEnd_toEndOf="@+id/id_rechercher_utilisateur_button"
        app:layout_constraintTop_toBottomOf="@+id/id_rechercher_utilisateur_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_voyages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/id_nouveauTrajet_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mes_voyages" />

    <EditText
        android:id="@+id/id_recherche_utilisateur_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nom_utilisateur"
        app:layout_constraintBottom_toBottomOf="@+id/id_rechercher_utilisateur_button"
        app:layout_constraintEnd_toStartOf="@+id/id_rechercher_utilisateur_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_rechercher_utilisateur_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/bleu"
        android:onClick="onClickRechercherUtilisateur"
        android:text="@string/rechercher"
        android:textColorLink="@color/bleu"
        app:layout_constraintBottom_toTopOf="@+id/tv_mes_voyages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_recherche_utilisateur_edittext"
        app:layout_constraintTop_toBottomOf="@+id/id_titreApplication_textview" />


</androidx.constraintlayout.widget.ConstraintLayout>