<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/id_debuterTrajet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#4CAF50"
        android:onClick="onClickDebuterTrajet"
        android:text="@string/debuter_le_trajet"
        android:textColorLink="#0D347E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_titreApplication_textview" />

    <Button
        android:id="@+id/id_terminerTrajet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="#971A1A"
        android:onClick="onClickTerminerTrajet"
        android:text="@string/fin_du_trajet"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/id_debuterTrajet_button"
        app:layout_constraintTop_toBottomOf="@+id/id_debuterTrajet_button" />

    <TextView
        android:id="@+id/id_titreApplication_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:text="@string/titre_application"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>